Use `Optional.isEmpty()` instead of `!Optional.isPresent()`